css/stylish-portfolio.css
/*!
 * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Global Styles */

html,
body {
  width: 100%;
  height: 100%;
}

body {
  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.text-vertical-center {
  display: table-cell;
  text-align: center;
  padding-bottom: 50px;
  padding-top: 10%;
}

.text-vertical-center h1 {
  margin: 0;
  padding-bottom: 50px;
  margin-top: 50px;
  font-size: 4.5em;
  font-weight: 700;
}

.group-title {
  width: 100%;
  border-top: 1px solid rgb(183, 221, 237);
  text-align: center;
  margin-top: 80px;
}
.group-title h6 {
  display: inline-block;
  position: relative;
  top: -40px;
  border: 1px solid rgb(183, 221, 237);
  background: none repeat scroll 0% 0% rgb(244, 250, 252);
  color: rgb(11, 84, 114);
  padding: 13px 60px 10px;
}

.font-light {
  font-weight: 300;
}

.bold {
  font-weight: bold;
}

/* Custom Button Styles */

.btn-dark {
  border-radius: 0;
  color: #fff;
  background-color: rgba(0, 0, 0, 0.4);
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
  color: #fff;
  background-color: rgba(0, 0, 0, 0.7);
}

.btn-light {
  border-radius: 0;
  color: #333;
  background-color: rgb(255, 255, 255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
  color: #333;
  background-color: rgba(255, 255, 255, 0.8);
}

/* Custom Horizontal Rule */

hr.small {
  max-width: 100px;
}

/* Side Menu */

#sidebar-wrapper {
  z-index: 1000;
  position: fixed;
  right: 0;
  width: 250px;
  height: 100%;
  margin-right: -250px;
  overflow-y: auto;
  background: #222;
  -webkit-transition: all 0.4s ease 0s;
  -moz-transition: all 0.4s ease 0s;
  -ms-transition: all 0.4s ease 0s;
  -o-transition: all 0.4s ease 0s;
  transition: all 0.4s ease 0s;
}

.sidebar-nav {
  position: absolute;
  top: 0;
  width: 250px;
  margin: 0;
  padding: 0;
  list-style: none;
}

.sidebar-nav li {
  text-indent: 20px;
  line-height: 40px;
}

.sidebar-nav li a {
  display: block;
  text-decoration: none;
  color: #999;
}

.sidebar-nav li a:hover {
  text-decoration: none;
  color: #fff;
  background: rgba(255, 255, 255, 0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
  text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
  height: 55px;
  font-size: 18px;
  line-height: 55px;
}

.sidebar-nav > .sidebar-brand a {
  color: #999;
}

.sidebar-nav > .sidebar-brand a:hover {
  color: #fff;
  background: none;
}

#menu-toggle {
  z-index: 1;
  position: fixed;
  top: 0;
  right: 0;
}

#sidebar-wrapper.active {
  right: 250px;
  width: 250px;
  -webkit-transition: all 0.4s ease 0s;
  -moz-transition: all 0.4s ease 0s;
  -ms-transition: all 0.4s ease 0s;
  -o-transition: all 0.4s ease 0s;
  transition: all 0.4s ease 0s;
}

.toggle {
  margin: 5px 5px 0 0;
}

/* Header */

.header {
  display: table;
  position: relative;
  width: 100%;
  background-color: lightcyan;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}

.padded-container {
  display: table-cell;
  padding-bottom: 10%;
  padding-top: 10%;
}

@media only screen and (max-width: 769px) {
  .header {
    height: 250px;
  }
  .header a {
    font-size: 14px !important;
  }

  .header h4 a {
    font-size: 14px !important;
  }

  .header h3 {
    font-size: 14px !important;
  }

  .header h4 {
    font-size: 12px !important;
  }
}

/* About */

/* Services */

.services {
  background: #212121;
}

.service-item {
  margin-bottom: 30px;
}

/* Callout */

.callout {
  color: #fff;
  background: #212121;
}

/* Portfolio */

.portfolio {
  padding: 50px 0;
}

.portfolio-item {
  margin-bottom: 30px;
}

.img-portfolio {
  margin: 0 auto;
}

.img-portfolio:hover {
  opacity: 0.8;
}

/* Call to Action */

.call-to-action {
  padding: 50px 0;
}

.call-to-action .btn {
  margin: 10px;
}

/* Map */

.map {
  min-height: 500px;
  background-image: url("../img/contact-bg1.png");
  background-repeat: no-repeat;
  background-position: center;
}

@media (max-width: 768px) {
  .map {
    height: 75%;
  }
}

/* Footer */

footer {
  padding: 5px;
}
.thumbnail {
  display: block;
  padding: 4px;
  line-height: 20px;
  border: 2px solid #ddd;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.text_decider {
  color: #fff;
}

/*Top background*/
.top_handle {
  background-image: url("../img/header_cover.jpg");
  background-repeat: no-repeat;
  /* background-size: contain; */
  background-position: center;
}
.heading_sec {
  text-align: center;
  text-decoration: underline;
  /*-webkit-text-decoration-color:  red;  
    text-decoration-color: red;*/
}
.red_text {
  color: #ed1442;
}
#sa {
  color: #ed1442;
  font-size: 3em;
}
/*Navigation*/
.navbar-custom {
  margin-bottom: 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
  text-transform: uppercase;
  font-family: "Roboto", sans-serif;
  background-color: #000;
}

.navbar-custom .navbar-brand {
  font-weight: 700;
}

.navbar-custom .navbar-brand:focus {
  outline: 0;
}

.navbar-custom,
.navbar-brand,
.navbar-toggle {
  padding: 10px;
  margin: 0;
  font-size: 16px;
  color: #fff;
}

.navbar-custom .navbar-brand .navbar-toggle:focus,
.navbar-custom .navbar-brand .navbar-toggle:active {
  outline: 0;
}

.navbar-custom a {
  color: #fff;
}

.navbar-custom .nav li a {
  -webkit-transition: background 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.navbar-custom .nav li a:hover {
  outline: 0;
  color: rgba(255, 255, 255, 0.8);
  background-color: transparent;
}

.navbar-custom .nav li a:focus,
.navbar-custom .nav li a:active {
  outline: 0;
  background-color: transparent;
}

.navbar-custom .nav li.active {
  outline: 0;
}

.navbar-custom .nav li.active a {
  background-color: rgba(255, 255, 255, 0.3);
}

.navbar-custom .nav li.active a:hover {
  color: #fff;
}
.menu_img {
  padding-top: 10px;
}

.page-scroll {
  font-size: 12px;
}

@media (min-width: 768px) {
  .logo > img {
    padding-top: 10px;
    width: 100px;
  }
  .navbar-custom {
    padding: 20px 0;
    border-bottom: 0;
    letter-spacing: 1px;
    background: 0 0;
    -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
    -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
  }

  .navbar-custom.top-nav-collapse {
    padding: 0;
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    background: #000;
  }
  #nav-modified {
    margin-left: 3%;
  }

  .sm-links {
    position: absolute;
  }
}
@media (max-width: 767px) {
  .logo > img {
    padding-top: 10px;
    width: 100px;
  }
  .career-btn,
  .sm-links {
    float: right;
  }
  .sm-links {
    position: relative;
  }
  .col-xs-10, .col-xs-8 {
    padding-left: unset;
  }
}

/*Bootstrap conflicting css*/
.bg-primary {
  color: unset !important;
  background-color: unset !important;
}

.career-btn,
.logo,
.sm-links {
  padding: 10px;
}

.sm-links {
  right: 0;
  top: 0;
}

.career-btn > a {
  background: #ed1442;
  padding: 4%;
  border-radius: 3px;
  font-size: 12px;
  text-decoration: none;
}

